# pixel-skribbl

./: .gitignore  .ignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  docker_build_release.sh  history.txt  shuttle_postbuild.sh
backend/: Cargo.toml  build.rs
backend/src/: main.rs
common/: Cargo.toml  build.rs
common/proto/: chat.proto
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
