[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["ws"] }
axum-sessions = "0.5"
common = { path = "../common" }
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
shuttle-axum = "0.18.0"
shuttle-runtime = "0.18.0"
shuttle-static-folder = "0.18.0"
tower-http = { version = "0.4.0", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
