[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["ws"] }
axum-sessions = "0.5"
common = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
tower-http = { version = "0.4.0", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
