[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8" # sudo apt install protobuf-compiler
