[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
futures = "0.3.25"
getrandom = { version = "0.2", features = ["js"] }
gloo-net = "0.2.5"
serde = "1.0.152"
serde_json = "1.0.91"
strum = { version = "0.24.1" }
stylist = { version = "0.11.0", features = ["yew", "yew_use_style", "yew_integration"] }
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["console", "Location"] }
yew = { version = "0.20.0", features = ["csr"] }
