[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
gloo-net = "0.2"
serde = "1.0"
serde_json = "1.0"
strum = { version = "0.24" }
stylist = { version = "0.11", features = ["yew_integration"] }
tonic = "0.8"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Location"] }
yew = { version = "0.20", features = ["csr"] }
