[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
bounded-vec-deque = "0.1"
common = { workspace = true }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
gloo-net = "0.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
stylist = { version = "0.12.1", features = ["yew", "yew_use_style", "yew_integration"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Location"] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
